manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-swarm-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-swarm-demo
  template:
    metadata:
      labels:
        app: my-swarm-demo
    spec:
      containers:
      - name: my-swarm-demo
        image: image-registry.openshift-image-registry.svc:5000/ubiowororuki-dev/my-swarm-demo:latest
        ports:
        - containerPort: 80
