manifests/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-swarm-demo
spec:
  selector:
    app: my-swarm-demo
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
